src/test/deca/syntax/valid/SansObjet/Inst8-While-Inst.deca
// Description:
//    While structure with single instruction.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        while (x) { y = z; }
}
